--- a/styles.css
+++ b/styles.css
@@ -261,18 +261,30 @@ pre {
 /* Projects */
 .projects {
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .projects .grid {
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr); /* before we do anything further, we have 2 rows and 3 columns. all of the elements are on the first row but there is an extra row we can't see yet */ 
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr); /* before we do anything further, we have 2 rows and 3 columns. all of the elements are on the first row but there is an extra row we can't see yet */ 
 }
 
-.projects .grid > *:first-child { /*anything that is the first child of the cli grid will have these qualities */
+/*
+.projects .grid > *:first-child {
   grid-column: 1 / span 2;
-  grid-row: 1 / span 2;
-}
-/* end tracy added */
+  grid-row: 1 / 2;
+} 
+
+.projects .grid > *:nth-child(2) {
+  grid-column: 3 / span 3;
+  grid-row: 1 / 2;
+} 
+
+.projects .grid > *:nth-child(3) {
+  grid-column: 1 / span 3;
+  grid-row: 2 / 3;
+} 
+*/
 
 /* Cloud */
 .cloud .grid {
@@ -298,6 +310,23 @@ pre {
 .languages .card:hover {
   transform: translateY(-15px); /* makes the little cards bounce up a tiny bit when you hover over them  ... but it's a little too abrupt so we'll go back up a few lines to .languages .card and add a transition ^^ */
 }
+
+.languages {
+  padding-top: 50px; /* pushes the stats content down below the transformy skewy diagonal jawn */
+  animation: slideInFromBottom 1s ease-in;
+  background-color: var(--light-color);
+  color: var(--secondary-color);
+}
+
+.languages h2 {
+  font-style: ;
+}
+
+.langlogo {
+  width: 80px;
+  height: 80px;
+}
+
 
 /* Features */
 .features-head img, .docs-head img {
