--- a/styles.css
+++ b/styles.css
@@ -44,14 +44,6 @@ p {
 
 img {
   width: 100%;   /* this prevents an image from bursting out of its container even if it's larger than the container, it'll just take 100% of the container */
-  
-}
-
-code, 
-pre {
-  background: #333;
-  color: #fff;
-  padding: 10px;
 }
 
 .hidden {
@@ -111,33 +103,6 @@ pre {
   animation: slideInFromLeft 1s ease-in;
 }
 
-/*.showcase-form {
-  position: absolute;
-  height: 330px;
-  width: 440px;
-  padding: 40px;
-  z-index: 100;
-  justify-self: flex-end;
-} */
-
-/* .showcase-form .form-control { /* reminder: form-control wraps the inputs */
-/*margin: 30px 0; *//*adds 30px margin top and bottom, 0 margin left and right */ /*
-}  */
-
-/* .showcase-form input[type='text'],
-.showcase-form input[type='email'] {
-  border: 0;
-  border-bottom: 1px solid cadetblue;
-  width: 100%;
-  background-color: darkslategray;
-  padding: 3px;
-  font-size: 16px;
-} */
-
-.showcase-form input:focus {
-  outline: none; /* this stops the weird outline from appearing when you click on one of these inputs */
-}
-
 .showcase::before, /* these are pseudo-selectors */
 .showcase::after {
   content: ''; /* content property is necessary for before or after thingies */
@@ -153,7 +118,6 @@ pre {
   -ms-transform: skewY(-3deg);
 }
 
-/* tracy added this */
 
 .showcase-pic {
   position: relative; /* relative because we're going to want to add a top property */
@@ -261,7 +225,7 @@ margin: 20px 0;
   font-size: 16px;
 }
 
-.showcase-form input:focus {
+.contact-form input:focus {
   outline: none; /* this stops the weird outline from appearing when you click on one of these inputs */
 }
 
