--- a/styles.css
+++ b/styles.css
@@ -193,15 +193,17 @@ img {
 
 /* Contact */
 
-.contact-card {
-  align-content: center;
+.contact-card .flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .contact-form.card {
   position: relative;
   height: auto;
   width: 400px;
-  padding: 40px;
+  padding: 30px;
   z-index: 100;
   margin: 50px auto;
 } 
@@ -211,7 +213,7 @@ img {
 }
 
 .contact-form .form-control { 
-margin: 20px 0; 
+margin: 15px auto; 
 }
 
 .contact-form input[type='text'],
@@ -229,7 +231,9 @@ margin: 20px 0;
   outline: none; /* this stops the weird outline from appearing when you click on one of these inputs */
 }
 
-.contact-form.card.lilguy {
+.lilguy {
+  width: 400px;
+  padding: 30px;
   margin: 0 auto;
 }
 
@@ -475,6 +479,20 @@ margin-right: 20px;
     margin: auto;
   }
 
+  .contact-form .card {
+    height: auto;
+    width: auto;
+  }
+
+  /*.contact-form.card {
+    position: relative;
+    height: auto;
+    width: 400px;
+    padding: 40px;
+    z-index: 100;
+    margin: 50px auto;
+  } */
+
   .cli .grid > *:first-child {
     grid-column: 1;
     grid-row: 1;
@@ -549,6 +567,10 @@ margin-right: 20px;
   padding: 20px;
   margin: 10px;
 }
+.contact-form.card.lilguy {
+  width: auto;
+  margin: 0 auto;
+}
 
 .btn {
   display: inline-block; /*default for links and buttons is inline but we want inline block */
@@ -605,7 +627,7 @@ margin-right: 20px;
 }
 
 .btn-primary.center {
-  margin: 0 auto;
+  margin: 15px auto 0;
 }
 
 /* Text Colors */
