fixes bio button

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,10 @@ img {
   margin: 20px 10px;
 }
 
+.showcase a {
+  margin: 10px 10px;
+}
+
 .showcase .grid {
   overflow: visible; /* stops the scrollbar thing from appearing when something inside the container is bigger than the container */
   grid-template-columns: 55% 45%;
